--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@
   p {
     font-family: 'Roboto', sans-serif;
     color: #1a1a1a;
+    font-weight: lighter;
   }
 
   .on_this_page {
@@ -132,41 +133,45 @@ html, body {
   }
 
   /* ----------Articles---------- */
-  .upper_section {
+  .section_one {
     margin: 0 0.4rem 0 0.4rem;
     background-color: #F1F2F6;
   }
 
-  .upper_section img {
+  .section_one img {
     width: 100%;
     height: auto;
   }
 
-  .photo_text_mobile {
+  .photo_source_mobile {
     opacity: 70%;
     font-size: x-small;
-    margin-top: -0.15rem;
+    margin: -0.15rem 0 0 0.5rem;
   }
 
-  .lower_section {
+  .photo_source_desktop_one, .photo_source_desktop_two {
+    visibility: collapse;
+  }
+
+  .section_two {
     margin: 1rem 0.4rem 0 0.4rem;
     background-color: #F1F2F6;
   }
 
-  .lower_section img {
+  .section_two img {
     width: 100%;
     height: auto;
   }
 
   .article_text {
     margin: 1.5rem 0.4rem 1.5rem 0.4rem;
-    font-size: 16px;
+    font-size: 18px;
   }
 
   /* ----------Bottom---------- */
   .bottom {
     margin-top: 10rem;
-    padding: 1rem 0rem 0 0rem;
+    padding: 3rem 0rem 3rem 0rem;
     background-color: #8B9096;
   }
 
@@ -177,10 +182,18 @@ html, body {
 
   .address, .hours {
     margin: 3rem 0rem 3rem 3rem;
+    font-size: smaller;
+    opacity: 90%;
+  }
+
+  .hours p {
+    margin: 0;
+    padding-bottom: 7px;
   }
 
   .address p {
-    margin: 0 0 -0.03rem 0;
+    margin: 0;
+    padding-bottom: 3px;
   }
 
 
@@ -301,44 +314,48 @@ html, body {
   }
 
   /* ----------Articles---------- */
-  .upper_section {
+  .section_one {
     margin: 0 0.4rem 0 0.4rem;
     background-color: #F1F2F6;
   }
 
-  .upper_section img {
+  .section_one img {
     width: 100%;
     height: auto;
   }
 
-  .photo_text_mobile {
+  .photo_source_mobile {
     opacity: 70%;
     font-size: x-small;
-    margin-top: -0.15rem;
+    margin: -0.15rem 0 0 1rem;
   }
 
-  .lower_section {
+  .photo_source_desktop_one, .photo_source_desktop_two {
+    visibility: collapse;
+  }
+
+  .section_two {
     margin: 1rem 0.4rem 0 0.4rem;
-    /* padding-bottom: 10rem;; */
     background-color: #F1F2F6;
   }
 
-  .lower_section img {
+  .section_two img {
     width: 100%;
     height: auto;
   }
 
   .article_text {
     margin: 1.5rem 1rem 1.5rem 1rem;
-    font-size: 16px;
+    font-size: 18px;
   }
 
   /* ----------Bottom---------- */
   .bottom {
     margin-top: 10rem;
-    padding: 1rem 0rem 0 0rem;
+    padding: 3rem 0 3rem 0;
     background-color: #8B9096;
     display: flex;
+    align-items: center;
     justify-content: center;
   }
 
@@ -348,11 +365,22 @@ html, body {
   }
 
   .address, .hours {
-    padding: 3rem 0rem 3rem 3rem;
+    padding: 0rem 0rem 3rem 3rem;
+    font-size: smaller;
+    opacity: 90%;
+    width: 250px;
+    height: 230px;
+    float: left;
+  }
+
+  .hours p {
+    margin: 0;
+    padding-bottom: 7px;
   }
 
   .address p {
-    margin: 0 0 -0.03rem 0;
+    margin: 0;
+    padding-bottom: 3px;
   }
 
 
@@ -478,43 +506,48 @@ html, body {
   }
 
    /* ----------Articles---------- */
-   .upper_section {
+   .section_one {
     margin: 0 0.4rem 0 0.4rem;
     background-color: #F1F2F6;
   }
 
-  .upper_section img {
+  .section_one img {
     width: 100%;
     height: auto;
   }
 
-  .photo_text_mobile {
+  .photo_source_mobile {
     opacity: 70%;
     font-size: x-small;
-    margin-top: -0.15rem;
+    margin: -0.15rem 0 0 1rem;
   }
 
-  .lower_section {
+  .photo_source_desktop_one, .photo_source_desktop_two {
+    visibility: collapse;
+  }
+
+  .section_two {
     margin: 1rem 0.4rem 0 0.4rem;
     background-color: #F1F2F6;
   }
 
-  .lower_section img {
+  .section_two img {
     width: 100%;
     height: auto;
   }
 
   .article_text {
     margin: 1.5rem 1rem 1.5rem 1rem;
-    font-size: 16px;
+    font-size: 18px;
   }
 
   /* ----------Bottom---------- */
   .bottom {
     margin-top: 10rem;
-    padding: 1rem 0rem 0 0rem;
+    padding: 3rem 0 3rem 0;
     background-color: #8B9096;
     display: flex;
+    align-items: center;
     justify-content: center;
   }
 
@@ -523,12 +556,26 @@ html, body {
     text-align: left;
   }
 
-  .address, .hours {
-    padding: 3rem 0rem 3rem 3rem;
+  .hours, .address {
+    font-size: smaller;
+    opacity: 90%;
+    width: 250px;
+    height: 230px;
+    float: left;
+  }
+
+  .address {
+    padding-left: 5vw;
+  }
+
+  .hours p {
+    margin: 0;
+    padding-bottom: 7px;
   }
 
   .address p {
-    margin: 0 0 -0.03rem 0;
+  margin: 0;
+  padding-bottom: 3px;
   }
   
 }
@@ -775,6 +822,97 @@ html, body {
     font-weight: inherit;
     font-size: 1.5rem;
   }
+
+     /* ----------Articles---------- */
+     .section_one {
+      margin: 0 2rem 0 2rem;
+      background-color: #F1F2F6;
+      display: inline-block;
+      align-items: flex-start;
+    }
+  
+    .section_one img {
+      width: 100%;
+      height: auto;
+      float: left;
+      width: 50%;
+    }
+
+    .article_text {
+      margin: 0rem;
+      padding-left: 2.5rem;
+      float: left;
+      width: 40%;
+      font-size: 18px;
+    }
+
+    .photo_source_desktop_one {
+      opacity: 70%;
+      font-size: x-small;
+      margin-left: 2rem;
+    }
+  
+    .photo_source_mobile {
+      visibility: collapse;
+    }
+  
+    .section_two {
+      margin: 2rem 2rem 0 2rem;
+      background-color: #F1F2F6;
+      display: inline-block;
+      align-items: flex-start;
+    }
+  
+    .section_two img {
+      width: 100%;
+      height: auto;
+      float: right;
+      width: 50%;
+    }
+
+    .photo_source_desktop_two {
+      opacity: 70%;
+      font-size: x-small;
+      margin-right: 2rem;
+      text-align: end;
+    }
+  
+    /* ----------Bottom---------- */
+    .bottom {
+      margin-top: 10rem;
+      padding: 3rem 0 3rem 0;
+      background-color: #8B9096;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+  
+    .bottom h4 {
+      color: #1A1A1A;
+      text-align: left;
+    }
+  
+    .hours, .address {
+      font-size: smaller;
+      opacity: 90%;
+      width: 250px;
+      height: 230px;
+      float: left;
+    }
+
+    .address {
+      padding-left: 10vw;
+    }
+
+    .hours p {
+      margin: 0;
+      padding-bottom: 7px;
+    }
+  
+    .address p {
+    margin: 0;
+    padding-bottom: 3px;
+    }
   
 }
 
@@ -901,5 +1039,96 @@ html, body {
     font-weight: inherit;
     font-size: 1.5rem;
   }
+  
+  /* ----------Articles---------- */
+  .section_one {
+  margin: 0 2rem 0 2rem;
+  background-color: #F1F2F6;
+  display: inline-block;
+  align-items: flex-start;
+}
+
+.section_one img {
+  width: 100%;
+  height: auto;
+  float: left;
+  width: 50%;
+}
+
+.article_text {
+  margin: 0rem;
+  padding-left: 2.5rem;
+  float: left;
+  width: 40%;
+  font-size: 18px;
+}
+
+.photo_source_desktop_one {
+  opacity: 70%;
+  font-size: x-small;
+  margin-left: 2rem;
+}
+
+.photo_source_mobile {
+  visibility: collapse;
+}
+
+.section_two {
+  margin: 2rem 2rem 0 2rem;
+  background-color: #F1F2F6;
+  display: inline-block;
+  align-items: flex-start;
+}
+
+.section_two img {
+  width: 100%;
+  height: auto;
+  float: right;
+  width: 50%;
+}
+
+.photo_source_desktop_two {
+  opacity: 70%;
+  font-size: x-small;
+  margin-right: 2rem;
+  text-align: end;
+}
+
+/* ----------Bottom---------- */
+.bottom {
+  margin-top: 10rem;
+  padding: 3rem 0 3rem 0;
+  background-color: #8B9096;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.bottom h4 {
+  color: #1A1A1A;
+  text-align: left;
+}
+
+.hours, .address {
+  font-size: smaller;
+  opacity: 90%;
+  width: 250px;
+  height: 230px;
+  float: left;
+}
+
+.address {
+  padding-left: 10vw;
+}
+
+.hours p {
+  margin: 0;
+  padding-bottom: 7px;
+}
+
+.address p {
+  margin: 0;
+  padding-bottom: 3px;
+}
   
 }
