--- a/pages/connect.css
+++ b/pages/connect.css
@@ -648,12 +648,9 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 2rem;
-  }
-
-  h2 {
+    font-size: 1.8rem;
     color: #1A1A1A;
-    font-weight: inherit;
+    font-weight: initial;
   }
   
   /* ----------Articles---------- */
@@ -685,7 +682,7 @@
 
 
   .article_text {
-    margin: 0rem;
+    margin: 0 0 1rem 0;
     padding-left: 2.5rem;
     float: left;
     width: 40%;
@@ -870,12 +867,9 @@ h1 {
   display: flex;
   align-items: center;
   justify-content: center;
-}
-
-h2 {
   color: #1A1A1A;
-  font-weight: inherit;
-  font-size: 1.5rem;
+  font-weight: initial;
+  font-size: 1.8rem;
 }
 
 /* ----------Articles---------- */
@@ -894,7 +888,7 @@ width: 50%;
 }
 
 .article_text {
-margin: 0rem;
+margin: 0 0 1rem 0;
 padding-left: 2.5rem;
 float: left;
 width: 40%;
