--- a/pages/explore.css
+++ b/pages/explore.css
@@ -1,11 +1,24 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,400i,500,700&display=swap');
+
+
 h1 {
   font-family: Helvetica;
   }
 
-  .on_this_page {
-    text-decoration: underline;
-    font-weight: 900;
-  }
+h2 {
+  font-family: 'Roboto', sans-serif;
+}
+
+p {
+  font-family: 'Roboto', sans-serif;
+  color: #1a1a1a;
+  font-weight: lighter;
+}
+
+.on_this_page {
+  text-decoration: underline;
+  font-weight: 900;
+}
 
 /* Smartphones (portrait) */
 @media only screen and (min-width : 320px) and (max-width : 480px) { 
@@ -77,16 +90,13 @@ html, body {
   }
 
   .inside_header_container {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%);
+    margin: 15vh 0 15vh 0;
   }
 
   h1 {
     font-size: 4rem;
     color: #f5f5f5;
+    text-align: center;
     text-shadow: 1px 1px 1px #000;
   }
 
@@ -164,11 +174,8 @@ html, body {
   }
 
   .inside_header_container {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%);
+    margin: 15vh 0 15vh 0;
+    text-align: center;
   }
 
   h1 {
@@ -255,103 +262,8 @@ html, body {
   }
 
   .inside_header_container {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%);
-  }
-
-  h1 {
-    font-size: 5rem;
-    color: #f5f5f5;
-    text-shadow: 1px 1px 1px #000;
-  }
-
-  
-}
-
-
-/*---------------------------------------------------------------------------------------------*/
-/* Tablet (landscape) */
-@media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
-
-  
-  html, body {
-    height: 100%;
-  }
-
-  body {
-    margin: 0;
-    padding: 0;
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-  }
-
-  /* ----------Navbar---------- */
-  .logo {
-    margin: 0 auto;
-  }
-
-  #navigation_bar img{
-    float: left;
-    height: 50px;
-    margin: 10px;
-    padding-left: 3%;
-  }
-
-  #navigation_bar {
-    background-color: #ffffff;
-    height: auto;
-    width: 100%;
-    text-align: right;
-    flex-direction: column;
-    border-bottom: solid thin rgb(100, 96, 96);
-  }
-  
-  #navigation_bar ul {
-    padding: 10px 30px 10px 0px;
-    margin: 0px;
-    text-align: right;
-    display: inline-block;
-  }
-  
-  #navigation_bar li {
-    list-style-type: none;
-    padding: 0px;
-    display: inline;
-  }
-  
-  #navigation_bar li a {
-    color: black;
-    font-size: 20px;
-    font-family: Helvetica;
-    text-decoration: none;
-    line-height: 52px;
-    padding: 10px;
-    opacity: 0.8;
-  }
-
-  #navigation_bar li a:hover {
-    text-decoration: underline;
-  }
-  
-  /* ----------Header---------- */
-  .header_container {
-    background-image: url("/images_csm/library-1132573_1920.jpg");
-    /* Image source: Community Science Museum */
-    background-position: center center;
-    position: relative;
-    height: 400px;
-  }
-
-  .inside_header_container {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%);
+    margin: 15vh 0 15vh 0;
+    text-align: center;
   }
 
   h1 {
@@ -442,11 +354,8 @@ html, body {
   }
 
   .inside_header_container {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%);
+    margin: 15vh 0 15vh 0;
+    text-align: center;
   }
 
   h1 {
@@ -538,11 +447,8 @@ html, body {
 }
 
 .inside_header_container {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  margin-right: -50%;
-  transform: translate(-50%, -50%);
+  margin: 15vh 0 15vh 0;
+  text-align: center;
 }
 
 h1 {
