--- a/pages/news.css
+++ b/pages/news.css
@@ -1,7 +1,17 @@
-h1 {
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,400i,500,700&display=swap');
+
+
+  h1 {
   font-family: Helvetica;
   }
-
+  h2 {
+    font-family: 'Roboto', sans-serif;
+  }
+  p {
+    font-family: 'Roboto', sans-serif;
+    color: #1a1a1a;
+    font-weight: lighter;
+  }
   .on_this_page {
     text-decoration: underline;
     font-weight: 900;
@@ -77,19 +87,104 @@ html, body {
   }
 
   .inside_header_container {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%);
+    margin: 15vh 0 15vh 0;
   }
 
   h1 {
     font-size: 4rem;
     color: #f5f5f5;
+    text-align: center;
     text-shadow: 1px 1px 1px #000;
   }
 
+  /* ----------Below Header---------- */
+  .title_text {
+    margin: 3rem 0.4rem 3rem 0.4rem;
+    text-align: center;
+  }
+
+  h2 {
+    color: #1A1A1A;
+    font-weight: initial;
+  }
+
+  /* ----------Articles---------- */
+  .section_one, .section_two {
+    margin: 0 1rem 0 1rem;
+    background-color: #F1F2F6;
+  }
+
+  .section_one img {
+    width: 100%;
+    height: auto;
+  }
+
+  .photo_source_mobile {
+    opacity: 70%;
+    font-size: x-small;
+    margin: -0.15rem 0 0 0.5rem;
+  }
+
+  .photo_source_desktop_one, .photo_source_desktop_two {
+    visibility: collapse;
+  }
+
+  .section_two img {
+    width: 100%;
+    height: auto;
+  }
+
+  .article_text {
+    margin: 1.5rem 0.4rem 1.5rem 0.4rem;
+    font-size: 16px;
+  }
+
+  .section_one h2, .section_two h2 {
+    margin: 1.5rem 0 0 0.4rem;
+    font-size: large;
+    text-decoration: underline;
+    font-style: italic;
+  }
+
+  /* ----------Bottom---------- */
+  .bottom {
+    margin-top: 10rem;
+    padding: 3rem 0rem 3rem 0rem;
+    background-color: #8B9096;
+  }
+
+  .bottom h4 {
+    color: #1A1A1A;
+    text-align: left;
+  }
+
+  .address, .hours {
+    margin: 3rem 0rem 3rem 3rem;
+    font-size: smaller;
+    opacity: 90%;
+  }
+
+  .hours p {
+    margin: 0;
+    padding-bottom: 7px;
+  }
+
+  .address p {
+    margin: 0;
+    padding-bottom: 3px;
+  }
+
+  /* ----------Footer---------- */
+  footer {
+  background-color: #8B9096;
+  font-size: x-small;
+  font-weight: lighter;
+  text-align: center;
+  }
+  
+  footer p {
+    opacity: 70%;
+  }
 
 }
 
@@ -164,11 +259,8 @@ html, body {
   }
 
   .inside_header_container {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%);
+    margin: 15vh 0 15vh 0;
+    text-align: center;
   }
 
   h1 {
@@ -177,6 +269,100 @@ html, body {
     text-shadow: 1px 1px 1px #000;
   }
   
+  /* ----------Below Header---------- */
+  .title_text {
+  margin: 3rem 2rem 3rem 2rem;
+  text-align: center;
+  }
+
+  h2 {
+    color: #1A1A1A;
+    font-weight: initial;
+  }
+
+  /* ----------Articles---------- */
+  .section_one, .section_two {
+    margin: 0 1rem 0 1rem;
+    background-color: #F1F2F6;
+  }
+
+  .section_one img {
+    width: 100%;
+    height: auto;
+  }
+
+  .photo_source_mobile {
+    opacity: 70%;
+    font-size: x-small;
+    margin: -0.15rem 0 0 1rem;
+  }
+
+  .photo_source_desktop_one, .photo_source_desktop_two {
+    visibility: collapse;
+  }
+
+  .section_two img {
+    width: 100%;
+    height: auto;
+  }
+
+  .article_text {
+    margin: 1.5rem 1rem 1.5rem 1rem;
+    font-size: 16px;
+  }
+
+  .section_one h2, .section_two h2 {
+    margin: 1.5rem 0 0 1rem;
+    font-size: large;
+    text-decoration: underline;
+    font-style: italic;
+  }
+
+  /* ----------Bottom---------- */
+  .bottom {
+    margin-top: 10rem;
+    padding: 3rem 0 3rem 0;
+    background-color: #8B9096;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .bottom h4 {
+    color: #1A1A1A;
+    text-align: left;
+  }
+
+  .address, .hours {
+    padding: 0rem 0rem 3rem 3rem;
+    font-size: smaller;
+    opacity: 90%;
+    width: 250px;
+    height: 230px;
+    float: left;
+  }
+
+  .hours p {
+    margin: 0;
+    padding-bottom: 7px;
+  }
+
+  .address p {
+    margin: 0;
+    padding-bottom: 3px;
+  }
+
+  /* ----------Footer---------- */
+  footer {
+  background-color: #8B9096;
+  font-size: x-small;
+  font-weight: lighter;
+  text-align: center;
+  }
+
+  footer p {
+    opacity: 70%;
+  }
   
 }
 
@@ -255,11 +441,8 @@ html, body {
   }
 
   .inside_header_container {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%);
+    margin: 15vh 0 15vh 0;
+    text-align: center;
   }
 
   h1 {
@@ -268,98 +451,107 @@ html, body {
     text-shadow: 1px 1px 1px #000;
   }
 
-  
-}
-
-
-/*---------------------------------------------------------------------------------------------*/
-/* Tablet (landscape) */
-@media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
-
-  
-  html, body {
-    height: 100%;
-  }
-
-  body {
-    margin: 0;
-    padding: 0;
+   /* ----------Below Header---------- */
+   .title_text {
+    margin: 3rem 20vw 3rem 20vw;
+    text-align: center;
     display: flex;
-    flex-direction: column;
-    min-height: 100vh;
+    align-items: center;
+    justify-content: center;
   }
 
-  /* ----------Navbar---------- */
-  .logo {
-    margin: 0 auto;
+  h2 {
+    color: #1A1A1A;
+    font-weight: initial;
+    font-size: 1.5rem;
   }
 
-  #navigation_bar img{
-    float: left;
-    height: 50px;
-    margin: 10px;
-    padding-left: 3%;
+   /* ----------Articles---------- */
+   .section_one, .section_two {
+    margin: 0 2rem 0 2rem;
+    background-color: #F1F2F6;
   }
 
-  #navigation_bar {
-    background-color: #ffffff;
-    height: auto;
+  .section_one img {
     width: 100%;
-    text-align: right;
-    flex-direction: column;
-    border-bottom: solid thin rgb(100, 96, 96);
-  }
-  
-  #navigation_bar ul {
-    padding: 10px 30px 10px 0px;
-    margin: 0px;
-    text-align: right;
-    display: inline-block;
-  }
-  
-  #navigation_bar li {
-    list-style-type: none;
-    padding: 0px;
-    display: inline;
-  }
-  
-  #navigation_bar li a {
-    color: black;
-    font-size: 20px;
-    font-family: Helvetica;
-    text-decoration: none;
-    line-height: 52px;
-    padding: 10px;
-    opacity: 0.8;
+    height: auto;
   }
 
-  #navigation_bar li a:hover {
+  .photo_source_mobile {
+    opacity: 70%;
+    font-size: x-small;
+    margin: -0.15rem 0 0 1rem;
+  }
+
+  .photo_source_desktop_one, .photo_source_desktop_two {
+    visibility: collapse;
+  }
+
+  .section_two img {
+    width: 100%;
+    height: auto;
+  }
+
+  .article_text {
+    margin: 1.5rem 1rem 1.5rem 1rem;
+    font-size: 16px;
+  }
+
+  .section_one h2, .section_two h2 {
+    margin: 1.5rem 0 0 1rem;
+    font-size: xx-large;
     text-decoration: underline;
+    font-style: italic;
+  }
+
+  /* ----------Bottom---------- */
+  .bottom {
+    margin-top: 10rem;
+    padding: 3rem 0 3rem 0;
+    background-color: #8B9096;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .bottom h4 {
+    color: #1A1A1A;
+    text-align: left;
+  }
+
+  .hours, .address {
+    font-size: smaller;
+    opacity: 90%;
+    width: 250px;
+    height: 230px;
+    float: left;
+  }
+
+  .address {
+    padding-left: 5vw;
+  }
+
+  .hours p {
+    margin: 0;
+    padding-bottom: 7px;
+  }
+
+  .address p {
+  margin: 0;
+  padding-bottom: 3px;
+  }
+
+  /* ----------Footer---------- */
+  footer {
+  background-color: #8B9096;
+  font-size: x-small;
+  font-weight: lighter;
+  text-align: center;
   }
   
-  /* ----------Header---------- */
-  .header_container {
-    background-image: url("/images_csm/utsav-srestha-HeNrEdA4Zp4-unsplash.jpg");
-    /* Image source: <https://unsplash.com/photos/HeNrEdA4Zp4> author: Utsav Srestha on Unsplash */
-    background-position: center center;
-    position: relative;
-    height: 400px;
+  footer p {
+    opacity: 70%;
   }
-
-  .inside_header_container {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%);
-  }
-
-  h1 {
-    font-size: 5rem;
-    color: #f5f5f5;
-    text-shadow: 1px 1px 1px #000;
-  }
-
   
 }
 
@@ -442,11 +634,8 @@ html, body {
   }
 
   .inside_header_container {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%);
+    margin: 15vh 0 15vh 0;
+    text-align: center;
   }
 
   h1 {
@@ -455,6 +644,139 @@ html, body {
     text-shadow: 1px 1px 1px #000;
   }
 
+   /* ----------Below Header---------- */
+   .title_text {
+    margin: 4rem 20vw 2rem 20vw;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.8rem;
+  }
+
+  h2 {
+    color: #1A1A1A;
+    font-weight: initial;
+  }
+  
+  /* ----------Articles---------- */
+  .section_one {
+    margin: 2rem 2rem 0 2rem;
+    background-color: #F1F2F6;
+    display: inline-block;
+    align-items: flex-start;
+  }
+
+  .section_one img {
+    width: 100%;
+    height: auto;
+    float: left;
+    width: 50%;
+  }
+
+  .h2_one_push_right {
+    margin-left: 50.5vw;
+    margin-top: -1rem;
+    font-size: xx-large;
+    font-style: italic;
+    text-decoration: underline;
+  }
+
+  .h2_two_push_right {
+    padding-left: 2.5rem;
+    margin-top: -2rem;
+    font-size: xx-large;
+    font-style: italic;
+    text-decoration: underline;
+  }
+
+
+  .article_text {
+    margin: 0 0 1rem 0;
+    padding-left: 2.5rem;
+    float: left;
+    width: 40%;
+    font-size: 16px;
+  }
+
+  .photo_source_desktop_one {
+    opacity: 70%;
+    font-size: x-small;
+    margin-left: 2rem;
+  }
+
+  .photo_source_mobile {
+    visibility: collapse;
+  }
+
+  .section_two {
+    margin: 2rem 2rem 0 2rem;
+    background-color: #F1F2F6;
+    display: inline-block;
+    align-items: flex-start;
+  }
+
+  .section_two img {
+    width: 100%;
+    height: auto;
+    float: right;
+    width: 50%;
+  }
+
+  .photo_source_desktop_two {
+    opacity: 70%;
+    font-size: x-small;
+    margin-right: 2rem;
+    text-align: end;
+  }
+
+  /* ----------Bottom---------- */
+  .bottom {
+    margin-top: 10rem;
+    padding: 3rem 0 3rem 0;
+    background-color: #8B9096;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .bottom h4 {
+    color: #1A1A1A;
+    text-align: left;
+  }
+
+  .hours, .address {
+    font-size: smaller;
+    opacity: 90%;
+    width: 250px;
+    height: 230px;
+    float: left;
+  }
+
+  .address {
+    padding-left: 10vw;
+  }
+
+  .hours p {
+    margin: 0;
+    padding-bottom: 7px;
+  }
+
+  .address p {
+  margin: 0;
+  padding-bottom: 3px;
+  }
+  /* ----------Footer---------- */
+  footer {
+  background-color: #8B9096;
+  font-size: x-small;
+  font-weight: lighter;
+  text-align: center;
+  }
+
+  footer p {
+    opacity: 70%;
+  }
   
 }
 
@@ -538,11 +860,8 @@ html, body {
 }
 
 .inside_header_container {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  margin-right: -50%;
-  transform: translate(-50%, -50%);
+  margin: 15vh 0 15vh 0;
+  text-align: center;
 }
 
 h1 {
@@ -551,5 +870,133 @@ h1 {
   text-shadow: 1px 1px 1px #000;
 }
 
+/* ----------Below Header---------- */
+.title_text {
+  margin: 4rem 0 2rem 0vw;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.8rem;
+  color: #1A1A1A;
+  font-weight: initial;
+}
+
+/* ----------Articles---------- */
+.section_one {
+margin: 2rem 2rem 0 2rem;
+background-color: #F1F2F6;
+display: inline-block;
+align-items: flex-start;
+}
+
+.section_one img {
+width: 100%;
+height: auto;
+float: left;
+width: 50%;
+}
+
+.article_text {
+margin: 0 0 1rem 0;
+padding-left: 2.5rem;
+float: left;
+width: 40%;
+font-size: 16px;
+}
+
+.h2_one_push_right {
+  margin-left: 50.5vw;
+  font-size: xx-large;
+  font-style: italic;
+  text-decoration: underline;
+}
+
+.h2_two_push_right {
+  padding-left: 2.5rem;
+  font-size: xx-large;
+  font-style: italic;
+  text-decoration: underline;
+}
+
+.photo_source_desktop_one {
+opacity: 70%;
+font-size: x-small;
+margin-left: 2rem;
+}
+
+.photo_source_mobile {
+visibility: collapse;
+}
+
+.section_two {
+margin: 2rem 2rem 0 2rem;
+background-color: #F1F2F6;
+display: inline-block;
+align-items: flex-start;
+}
+
+.section_two img {
+width: 100%;
+height: auto;
+float: right;
+width: 50%;
+}
+
+.photo_source_desktop_two {
+opacity: 70%;
+font-size: x-small;
+margin-right: 2rem;
+text-align: end;
+}
+
+/* ----------Bottom---------- */
+.bottom {
+margin-top: 10rem;
+padding: 3rem 0 3rem 0;
+background-color: #8B9096;
+display: flex;
+align-items: center;
+justify-content: center;
+}
+
+.bottom h4 {
+color: #1A1A1A;
+text-align: left;
+}
+
+.hours, .address {
+font-size: smaller;
+opacity: 90%;
+width: 250px;
+height: 230px;
+float: left;
+}
+
+.address {
+padding-left: 10vw;
+}
+
+.hours p {
+margin: 0;
+padding-bottom: 7px;
+}
+
+.address p {
+margin: 0;
+padding-bottom: 3px;
+}
+
+/* ----------Footer---------- */
+footer {
+background-color: #8B9096;
+font-size: x-small;
+font-weight: lighter;
+text-align: center;
+}
+
+footer p {
+opacity: 70%;
+}
 
 }
